2007-01-11 [paul]	2.7.0cvs8

	* src/imap.c
		Fix recursion when server lists the
		current subfolder in the response
	* src/mimeview.c
		Fix updating of icon_list/ctree
	* src/plugins/pgpcore/select-keys.c
		Fix a few annoyances when choosing
		keys for the CMS (S/MIME) protocol

2007-01-11 [wwp]	2.7.0cvs7

	* src/compose.c
	* src/prefs_account.c
	* src/prefs_account.h
		Add per-account spellcheck default dictionaries settings.

2007-01-10 [colin]	2.7.0cvs6

	* src/prefs_folder_item.c
		Factorize strings - patch by Fabien

2007-01-10 [colin]	2.7.0cvs5

	* src/mainwindow.c
		Fix bug 1095, 'Crash while changing folder 
		columns during incorporation'

2007-01-09 [colin]	2.7.0cvs4

	* src/gtk/pluginwindow.c
		Set the plugin window transient. Seems
		like some window managers hide it in
		the background after "load plugin"...

2007-01-09 [colin]	2.7.0cvs3

	* src/gtk/filesel.c
		Use the same type for alloc and free

2007-01-08 [paul]	2.7.0cvs2

	* po/nl.po
		updated by Tim Dijkstra

2007-01-08 [paul]	2.7.0cvs1

	* src/prefs_themes.c
	* src/common/utils.c
		Fix resource leaks

2007-01-08 [paul]	2.7.0

	* NEWS
	* README
	* RELEASE_NOTES
		2.7.0 released

2007-01-08 [paul]	2.6.1cvs119

	* doc/man/claws-mail.1
		another correction

2007-01-08 [paul]	2.6.1cvs118

	* doc/man/claws-mail.1
		corrections
	* manual/advanced.xml
		improved English usage

2007-01-08 [paul]	2.6.1cvs117

	* po/ca.po
	* po/de.po
	* po/en_GB.po
	* po/fi.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
	* po/sr.po
	* po/zh_CN.po
		updated by Miquel Oliete, Stephan Sachse, me,
		Tommi Pirinen, Andrea Spadaccini, Frederico
		Goncalves Guimaraes, Andrej Kacian, Aleksandar
		Urosevic, and Ralgh Young

2007-01-07 [mones]	2.6.1cvs116

	* manual/es/advanced.xml
	* po/es.po
		Synced manual (unhide mark_as_read_delay)
		and updated translation for release

2007-01-07 [paul]	2.6.1cvs115

	* src/prefs_matcher.c
		make the hbox content fit better under
		various languages

2007-01-07 [colin]	2.6.1cvs114
