@@ -1,7 +1,9 @@
 src/account.c
 src/action.c
+src/addr_compl.c
 src/addressadd.c
 src/addressbook.c
+src/addressbook_foldersel.c
 src/addrgather.c
 src/addrindex.c
 src/alertpanel.c
@@ -37,11 +39,9 @@ src/gedit-print.c
 src/grouplistdialog.c
 src/gtk/about.c
 src/gtk/colorlabel.c
-src/gtk/description_window.c
 src/gtk/foldersort.c
-src/gtk/gtksourceprintjob.c
 src/gtk/gtkaspell.c
-src/gtk/gtkutils.c
+src/gtk/gtksourceprintjob.c
 src/gtk/icon_legend.c
 src/gtk/inputdialog.c
 src/gtk/logwindow.c
@@ -71,25 +71,27 @@ src/mh_gtk.c
 src/mimeview.c
 src/news.c
 src/news_gtk.c
+src/plugins/bogofilter/bogofilter.c
+src/plugins/bogofilter/bogofilter_gtk.c
 src/plugins/clamav/clamav_plugin.c
 src/plugins/clamav/clamav_plugin_gtk.c
 src/plugins/demo/demo.c
 src/plugins/dillo_viewer/dillo_prefs.c
 src/plugins/dillo_viewer/dillo_viewer.c
 src/plugins/pgpcore/passphrase.c
+src/plugins/pgpcore/pgp_viewer.c
+src/plugins/pgpcore/plugin.c
 src/plugins/pgpcore/prefs_gpg.c
 src/plugins/pgpcore/select-keys.c
 src/plugins/pgpcore/sgpgme.c
-src/plugins/pgpcore/plugin.c
-src/plugins/pgpcore/pgp_viewer.c
 src/plugins/pgpinline/pgpinline.c
 src/plugins/pgpinline/plugin.c
-src/plugins/pgpmime/plugin.c
 src/plugins/pgpmime/pgpmime.c
+src/plugins/pgpmime/plugin.c
 src/plugins/spamassassin/spamassassin.c
 src/plugins/spamassassin/spamassassin_gtk.c
-src/plugins/trayicon/trayicon.c
 src/plugins/trayicon/libeggtrayicon/eggtrayicon.c
+src/plugins/trayicon/trayicon.c
 src/pop.c
 src/prefs_account.c
 src/prefs_actions.c
