@@ -1,3 +1,9 @@
+2007-01-11 [colin]	2.7.0cvs9
+
+	* po/POTFILES.in
+		Fix files to translate. Patch by
+		Fabien
+
 2007-01-11 [paul]	2.7.0cvs8
 
 	* src/imap.c
